--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.yuzumone.expandabletextview.MainActivity"
-    >
+    tools:context="net.expandable.sample.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
